user-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gsn-carrot
  labels:
    name: gsn-carrot
