user-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  namespace: gsn-carrot
  labels:
    app: user-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: user-api
